# my-no-sql-node

./: Cargo.toml  Dockerfile  README.md  package-lock.json
.github/workflows/: release.yml
JavaScript/: HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlSubscribersGenerator.js  HtmlSubscribersGenerator.js.map
TypeScript/: HtmlSubscribersGenerator.ts  contracts.d.ts
src/: main.rs  settings_reader.rs
src/app/: app_ctx.rs  connection_to_main_node.rs  metrics.rs  mod.rs
src/background/: gc_http_sessions.rs  metrics_updater.rs  mod.rs  sync_to_client.rs  sync_to_clients.rs  sync_to_main_node.rs
src/data_readers/: connection.rs  data_reader.rs  data_reader_updatable_data.rs  data_readers_data.rs  data_readers_list.rs
src/data_readers/http_connection/: connection_delivery_info.rs  http_connection_info.rs  into_http_payload.rs
src/data_readers/tcp_connection/: tcp_connection_info.rs  tcp_payload_to_send.rs
src/db_operations/: error.rs  mod.rs  parse_json_entity.rs
src/db_operations/read/: get_highest_row_and_below.rs  mod.rs  multipart.rs  read_filter.rs  read_operation_result.rs
src/db_operations/sync_from_main/: delete_rows.rs  get_or_add_table.rs  mod.rs  sync_partition.rs  sync_rows.rs  sync_table.rs
src/db_operations/sync_to_main/: mod.rs  update_partition_expiration_time.rs  update_partitions_last_read_time.rs  update_rows_expiration_time.rs  update_rows_last_read_time.rs
src/db_sync/: mod.rs  sync_attributes.rs  sync_event.rs
src/db_sync/states/: delete_rows_event_sync_data.rs  init_table_sync_data.rs  (+4 more)
src/http/: get_table.rs  http_sessions.rs  mod.rs  start_up.rs
src/operations/: data_readers.rs  get_metrics.rs  mod.rs  sync.rs
src/tcp/: tcp_server_events.rs
src/tcp_client/: tcp_client_socket_callback.rs
src/tcp_client_to_main_node/: mod.rs  tcp_client_socket_callback.rs
src/tcp_server/: tcp_server_events.rs
wwwroot/js/: app.js
(+48 files in other folders)
