[package]
name = "my-no-sql-node"
version = "0.2.0"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.6.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

my-no-sql-sdk = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-no-sql-sdk.git", features = [
    "tcp-contracts",
    "core",
] }

my-no-sql-server-core = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-no-sql-server-core.git" }


flurl = { tag = "0.4.1", git = "https://github.com/MyJetTools/fl-url" }


rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

my-logger = { tag = "1.0.3", git = "https://github.com/MyJetTools/my-logger.git" }
my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }

my-tcp-sockets = { tag = "0.1.8", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }

hyper-tls = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
chrono = "*"
futures-util = { version = "*", default-features = false }
futures-core = { version = "*", default-features = false }
futures-channel = "*"
serde_json = "*"
serde_derive = "*"
quick-xml = "*"
lazy_static = "*"
hmac = "*"
sha2 = "*"
base64 = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["serde", "v4"] }
prometheus = "*"
signal-hook = "*"
async-trait = "*"
tokio-stream = "*"
